--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,17 +1,137 @@
-@article{Garnier2007,
-  abstract      = {The roots of swarm intelligence are deeply embedded in the biological study of self-organized behaviors in social insects. From the routing of traffic in telecommunication networks to the design of control algorithms for groups of autonomous robots, the collective behaviors of these animals have inspired many of the foundational works in this emerging research field. For the first issue of this journal dedicated to swarm intelligence, we review the main biological principles that underlie the organization of insects’ colonies. We begin with some reminders about the decentralized nature of such systems and we describe the un- derlying mechanisms of complex collective behaviors of social insects, from the concept of stigmergy to the theory of self-organization in biological systems.We emphasize in partic- ular the role of interactions and the importance of bifurcations that appear in the collective output of the colony when some of the system’s parameters change. We then propose to categorize the collective behaviors displayed by insect colonies according to four functions that emerge at the level of the colony and that organize its global behavior. Finally, we ad- dress the role of modulations of individual behaviors by disturbances (either environmental or internal to the colony) in the overall flexibility of insect colonies. We conclude that fu- ture studies about self-organized biological behaviors should investigate such modulations to better understand how insect colonies adapt to uncertain worlds.},
-  author        = {Garnier, Simon and Gautrais, Jacques and Theraulaz, Guy},
-  doi           = {10.1007/s11721-007-0004-y},
-  file          = {:Users/simongarnier/Work/bibliography/Mendeley/Swarm Intelligence/2007/Garnier, Gautrais, Theraulaz - 2007.pdf:pdf},
-  issn          = {1935-3812},
-  journal       = {Swarm Intelligence},
-  keywords      = {self organization collective,self-organization collective,social insects,stigmergy,swarm intelligence},
-  mendeley-tags = {swarm intelligence},
-  month         = jul,
-  number        = {1},
-  pages         = {3--31},
-  title         = {{The biological principles of swarm intelligence}},
-  url           = {http://www.springerlink.com/index/10.1007/s11721-007-0004-y},
-  volume        = {1},
-  year          = {2007}
+@article{palmer2000tokenisation,
+  title={Tokenisation and sentence segmentation},
+  author={Palmer, David D},
+  journal={Handbook of natural language processing},
+  pages={11--35},
+  year={2000},
+  publisher={New York: Marcel Dekker, Inc}
+} 
+
+@misc{row_shuffling_MEDIUM,
+  author = "Myrianthous, Giorgos",
+  year = "2021",
+  title = "Shuffling Rows in Pandas DataFrames",
+  howpublished = "\url{https://towardsdatascience.com/shuffling-rows-in-pandas-dataframes-eda052275635#:~:text=Therefore%2C%20we%20have%20to%20shuffle,to%20new%2C%20unseen%20data%20points.}",
+  note = "[Accessed: 22-10-2023]",
 }
+
+
+@inproceedings{ramos2003using,
+  title={Using tf-idf to determine word relevance in document queries},
+  author={Ramos, Juan and others},
+  booktitle={Proceedings of the first instructional conference on machine learning},
+  volume={242},
+  number={1},
+  pages={29--48},
+  year={2003},
+  organization={Citeseer}
+}
+
+
+@article{sharma2017activation,
+  title={Activation functions in neural networks},
+  author={Sharma, Sagar and Sharma, Simone and Athaiya, Anidhya},
+  journal={Towards Data Sci},
+  volume={6},
+  number={12},
+  pages={310--316},
+  year={2017}
+}
+
+
+@inproceedings{almurieb2020softmax,
+  title={SoftMax neural best approximation},
+  author={Almurieb, Hawraa A and Bhaya, Eman S},
+  booktitle={IOP Conference Series: Materials Science and Engineering},
+  volume={871},
+  number={1},
+  pages={012040},
+  year={2020},
+  organization={IOP Publishing}
+}
+
+@article{el2012application,
+  title={An application on multinomial logistic regression model},
+  author={El-Habil, Abdalla M},
+  journal={Pakistan journal of statistics and operation research},
+  pages={271--291},
+  year={2012},
+  publisher={College of Statistical and Actuarial Sciences}
+}
+
+
+@book{james2013introduction,
+  title={An introduction to statistical learning},
+  author={James, Gareth and Witten, Daniela and Hastie, Trevor and Tibshirani, Robert},
+  volume={112},
+  year={2013},
+  publisher={Springer}
+}
+
+
+@inproceedings{patle2013svm,
+  title={SVM kernel functions for classification},
+  author={Patle, Arti and Chouhan, Deepak Singh},
+  booktitle={2013 International conference on advances in technology and engineering (ICATE)},
+  pages={1--9},
+  year={2013},
+  organization={IEEE}
+}
+
+@article{Chicco_and_Jurman_2020,
+  title={Machine learning can predict survival of patients with heart failure from serum creatinine and ejection fraction alone},
+  author={Chicco, Davide and Jurman, Giuseppe},
+  journal={BMC medical informatics and decision making},
+  volume={20},
+  number={1},
+  pages={1--16},
+  year={2020},
+  publisher={BioMed Central}
+}
+
+@article{grandini2020metrics,
+  title={Metrics for multi-class classification: an overview},
+  author={Grandini, Margherita and Bagli, Enrico and Visani, Giorgio},
+  journal={arXiv preprint arXiv:2008.05756},
+  year={2020}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
